styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

:root {
  --yellow: #f4c203;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Montserrat", sans-serif, -apple-system, BlinkMacSystemFont,
    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
    Helvetica Neue, sans-serif;
  font-weight: 500;
  font-size: 18px;
}

body {
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  width: 1em;
  height: 1em;
}

body::-webkit-scrollbar-track {
  background: black;
  border-radius: 100vw;
  border: 0.1em solid white;
  margin-block: 0.5em;
}

body::-webkit-scrollbar-thumb {
  background: var(--yellow);
  border: 0.1em solid black;
  border-radius: 100vw;
}

body::-webkit-scrollbar-thumb:hover {
  background: gray;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }

  body::-webkit-scrollbar-track {
    background: white;
    border-radius: 100vw;
    border: 0.1em solid black;
    margin-block: 0.5em;
  }

  body::-webkit-scrollbar-thumb {
    background: var(--yellow);
    border: 0.1em solid black;
    border-radius: 100vw;
  }

  .menu {
    background: black;
    color: white;
  }

  h1,
  h2,
  h3,
  h4 {
    color: white;
  }
}

@media (prefers-color-scheme: light) {
  .menu {
    background: white;
  }
}

.menu {
  opacity: 90%;
}

h1,
h2,
h4 {
  display: flex;
  align-items: center;
  margin: 32px 0;
  padding-left: 4px;
  font-weight: 900;
  font-size: 48px;
  border-left: 13px solid var(--yellow);
  line-height: 50px;
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex-wrap: wrap;
  margin-bottom: 100px;
  padding: 0 16px;
}

a {
  color: inherit;
  text-decoration: none;
}

p {
  line-height: 50px;
}

hr {
  width: 100%;
  margin: 24px 0;
}

.link {
  margin-right: 24px;
  font-size: 48px;
  font-weight: 900;
  cursor: pointer;
}

.link:hover {
  border-bottom: 4px solid var(--yellow);
}

@media (min-width: 992px) {
  .link {
    height: 50px;
    font-size: 24px;
    font-weight: 400;
    transition: all 0.3s ease;
  }
}

.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0%;
  z-index: 2;
  background: #f4c203;
}

.noscroll {
  overflow: hidden;
}

